2006-03-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Don't throw when cancelling the dialogue with ESC. Fixes bug #333780,
	patch has RT approval.

2006-03-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GlobalHistory.cpp:

	Build fix to build with 1.8 branch. No code changes, only
	#ifdef code that must not be built on 1.8 branch.

2006-03-06  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.99 ===

	* configure.ac:

2006-03-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozRegisterComponents.cpp:
	
	Back the xpinstall change out; it breaks on gecko 1.8.

2006-03-05  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-session.c:
	
	Update timestamp on resume dialogue when queuing a
	new command.

2006-03-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-find.cpp:
	
	Don't use g_return_if_fail here.

	* embed/mozilla/mozilla-embed-single.cpp:
	
	Remove fixed FIXME.

2006-03-05  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany-fonts.schemas:
	* data/generate-font-schemas.py:
	
	Fix fonts schema default values.

	* embed/downloader-view.c: (downloader_view_build_ui):

	Forgotten commit.

2006-03-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozRegisterComponents.cpp:
	
	Use the right category.

2006-03-05  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:
	
	Mark application/x-xpinstall as unsafe.

	* embed/mozilla/MozRegisterComponents.cpp:

	Unregister xpinstall content handler and JS objects;
	fixes download of .xpi files.

2006-03-05  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:

	Before running any test programs, check that we can compile and run
	any XPCOM programs at all.

2006-03-03  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/GlobalHistory.h:
	* embed/mozilla/GlobalHistory.cpp:

	Sync Epiphany with new nsIGlobalHistory3 stuff.
