@@ -1,3 +1,10 @@
+2006-03-10  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/bookmarks/ephy-bookmarks-editor.c:
+
+	Fix item ordering to fix bookmarks export format. Bug #333959,
+	patch has RT approval.
+
 2006-03-08  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/EphyPromptService.cpp:
